Fix: Addition Mobile Layout 46

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1542,7 +1542,7 @@ body {
     
     /* Default margin for screens up to 992px (like landscape phone/tablet) */
     .main-content {
-        margin-top: -13rem !important; /* Your -5rem value */
+        margin-top: -13rem; /* Your -5rem value */
         
         padding-top: 1rem !important;
         margin-bottom: 0 !important;
@@ -1552,7 +1552,7 @@ body {
     /* Override for screens up to 700px (like portrait phone) */
     @media (max-width: 700px) {
         .main-content {
-            margin-top: -22rem !important; /* Your -10rem value */
+            margin-top: -20rem; /* Your -10rem value */
         }
     }
     /* === END HERO SECTION LOGIC === */
@@ -1656,6 +1656,7 @@ body {
 
     .footer-main { padding: 3rem 1.5rem; }
     footer h3 { font-size: 1.8rem; font-weight: 700; color: #c1121f; }
+    footer h3 { font-size: 1.2rem;}
 
     #search-overlay .search-content { width: 80%; margin-right: 0; }
     #search-overlay form { width: 100%; }
